--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,7 @@
     <color name="black">#000000</color>
     <color name="seagreen">#169198</color>
     <color name="recycleviewcolor">#F5F5F5</color>
+    <color name="greenish">#117C2E</color>
+    <color name="gree5nish">#68FF91</color>
 
 </resources>
