--- a/app/src/main/res/drawable/amountlayoutrecordkeeping.xml
+++ b/app/src/main/res/drawable/amountlayoutrecordkeeping.xml
@@ -5,7 +5,12 @@
     android:shape="rectangle"
     >
     <solid android:color="@color/seagreen"></solid>
-    <corners android:radius="10dp"></corners>
+    <size
+        android:width="3dp"
+        android:height="1dp"/>
+    <corners android:radius="1dp">
+
+    </corners>
 
 
 </shape>
