--- a/app/src/main/res/drawable/setamountlayoutsave.xml
+++ b/app/src/main/res/drawable/setamountlayoutsave.xml
@@ -2,10 +2,12 @@
 <shape xmlns:andorid="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:shape="rectangle"
+    android:shape="oval"
     >
     <solid android:color="@color/seagreen"></solid>
-    <corners android:radius="10dp"></corners>
+    <size
+        android:width="1dp"
+        android:height="1dp"/>
 
 
 </shape>
