--- a/app/src/main/res/layout/menu_fragment.xml
+++ b/app/src/main/res/layout/menu_fragment.xml
@@ -15,7 +15,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
+
+
     </View>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:text="Menu"
+        android:textColor="@color/white"
+        android:textSize="42sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/record_diary_button"
@@ -117,29 +132,6 @@
 
 
 
-    <ImageButton
-        android:id="@+id/insights_button"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        app:layout_constraintTop_toBottomOf="@id/savings_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="35dp"
-        android:layout_marginBottom="290dp"
-        android:layout_marginEnd="200dp"
-        android:src="@drawable/insights"
-        android:background="@color/appgrey"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Insights"
-        android:textColor="@color/appPrimaryColor"
-        app:layout_constraintTop_toTopOf="@+id/insights_button"
-        app:layout_constraintBottom_toBottomOf="@id/insights_button"
-        app:layout_constraintStart_toStartOf="@id/insights_button"
-        app:layout_constraintEnd_toEndOf="@id/insights_button"
-        android:layout_marginTop="90dp" />
 
     <ImageButton
         android:id="@+id/wallet_button"
@@ -150,7 +142,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="35dp"
         android:layout_marginBottom="290dp"
-        android:layout_marginStart="200dp"
         android:src="@drawable/wallet"
         android:background="@color/appgrey"/>
 
