--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -1,14 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/appBackground"
+    >
+
+
+    <View
+        android:id="@+id/view3"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@color/appPrimaryColor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </View>
 
     <TextView
-        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="169dp"
-        android:layout_marginTop="319dp"
-        android:text="Home" />
-</RelativeLayout>
+        android:layout_marginTop="48dp"
+        android:text="Settings"
+        android:textColor="@color/white"
+        android:textSize="42sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/profile_button"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="290dp"
+        android:layout_marginEnd="200dp"
+        android:src="@drawable/record"
+        android:background="@color/appgrey"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Profile Settings"
+        android:textColor="@color/appPrimaryColor"
+        app:layout_constraintTop_toTopOf="@+id/record_diary_button"
+        app:layout_constraintBottom_toBottomOf="@id/profile_button"
+        app:layout_constraintStart_toStartOf="@id/profile_button"
+        app:layout_constraintEnd_toEndOf="@id/profile_button"
+        android:layout_marginTop="90dp" />
+
+    <ImageButton
+        android:id="@+id/help_button"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="290dp"
+        android:layout_marginStart="200dp"
+        android:src="@drawable/monthly"
+        android:background="@color/appgrey"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Help"
+        android:textColor="@color/appPrimaryColor"
+        app:layout_constraintTop_toTopOf="@+id/monthly_budget_button"
+        app:layout_constraintBottom_toBottomOf="@id/help_button"
+        app:layout_constraintStart_toStartOf="@id/help_button"
+        app:layout_constraintEnd_toEndOf="@id/help_button"
+        android:layout_marginTop="90dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"/>
+
+
+    <ImageButton
+        android:id="@+id/contact_button"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profile_button"
+        android:src="@drawable/savings"
+        android:background="@color/appgrey"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Contact Us"
+        android:textColor="@color/appPrimaryColor"
+        app:layout_constraintTop_toTopOf="@+id/savings_button"
+        app:layout_constraintBottom_toBottomOf="@id/contact_button"
+        app:layout_constraintStart_toStartOf="@id/contact_button"
+        app:layout_constraintEnd_toEndOf="@id/contact_button"
+        android:layout_marginTop="90dp" />
+
+    <ImageButton
+        android:id="@+id/logout_button"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="35dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/help_button"
+        android:src="@drawable/loans"
+        android:background="@color/appgrey" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        android:textColor="@color/appPrimaryColor"
+        app:layout_constraintTop_toTopOf="@+id/loans_button"
+        app:layout_constraintBottom_toBottomOf="@id/logout_button"
+        app:layout_constraintStart_toStartOf="@id/logout_button"
+        app:layout_constraintEnd_toEndOf="@id/logout_button"
+        android:layout_marginTop="90dp" />
+
+
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
