--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -51,7 +51,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="25dp"
-            android:text="Manage Budget"
+            android:text="Manage Wallet"
             android:textColor="@color/appIcons"
             android:textSize="30dp">
 
@@ -117,7 +117,8 @@
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                android:onClick="records_button_func"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -183,7 +184,8 @@
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                android:onClick="savings_button_func"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -213,6 +215,7 @@
 
 
             <TextView
+                android:id="@+id/lpd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
@@ -225,12 +228,14 @@
 
 
             <ImageView
+                android:id="@+id/lrci"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="160dp"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/baseline_toys_24"
                 android:tint="@color/appPrimaryColor"
+                app:layout_constraintStart_toEndOf="@id/lpd"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -241,6 +246,8 @@
                 android:layout_marginTop="19dp"
                 android:layout_marginEnd="3dp"
                 android:text="Loans to be Received"
+                app:layout_constraintStart_toEndOf="@id/lrci"
+                android:layout_marginStart="3dp"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -250,29 +257,29 @@
                 android:id="@+id/total_loans_paid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
+                android:layout_marginStart="40dp"
                 android:text="temp"
                 android:textColor="@color/red"
-                android:textSize="32sp"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.495" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/total_loans_rec"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="48dp"
+                android:layout_marginStart="30dp"
                 android:text="temp"
                 android:textColor="@color/red"
-                android:textSize="32sp"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.496" />
+                app:layout_constraintHorizontal_bias="0.439"
+                app:layout_constraintStart_toEndOf="@id/total_loans_paid"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/total_loans_button"
@@ -286,7 +293,8 @@
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                android:onClick="loans_button_func"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
