--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -38,7 +38,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="290dp"
         android:layout_marginEnd="200dp"
-        android:src="@drawable/record"
+        android:src="@drawable/ic_icons8_settings"
         android:background="@color/appgrey"/>
 
     <TextView
@@ -52,67 +52,21 @@
         app:layout_constraintEnd_toEndOf="@id/profile_button"
         android:layout_marginTop="90dp" />
 
-    <ImageButton
-        android:id="@+id/help_button"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="290dp"
-        android:layout_marginStart="200dp"
-        android:src="@drawable/monthly"
-        android:background="@color/appgrey"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Help"
-        android:textColor="@color/appPrimaryColor"
-        app:layout_constraintTop_toTopOf="@+id/monthly_budget_button"
-        app:layout_constraintBottom_toBottomOf="@id/help_button"
-        app:layout_constraintStart_toStartOf="@id/help_button"
-        app:layout_constraintEnd_toEndOf="@id/help_button"
-        android:layout_marginTop="90dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"/>
 
 
-    <ImageButton
-        android:id="@+id/contact_button"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="200dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_button"
-        android:src="@drawable/savings"
-        android:background="@color/appgrey"
-        />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contact Us"
-        android:textColor="@color/appPrimaryColor"
-        app:layout_constraintTop_toTopOf="@+id/savings_button"
-        app:layout_constraintBottom_toBottomOf="@id/contact_button"
-        app:layout_constraintStart_toStartOf="@id/contact_button"
-        app:layout_constraintEnd_toEndOf="@id/contact_button"
-        android:layout_marginTop="90dp" />
 
     <ImageButton
         android:id="@+id/logout_button"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginStart="200dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginBottom="290dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/help_button"
-        android:src="@drawable/loans"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_logout_img"
         android:background="@color/appgrey" />
 
     <TextView
